# pypi-mcp

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  WARP.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  run_tests.py
.augment/rules/: MypyAll.md  MypyCheck.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/about/: acknowledgments.md  changelog.md  license.md
docs/api-reference/: data-models.md  overview.md  prompts.md  resources.md  tools.md
docs/developer-guide/: architecture.md  contributing.md  development-setup.md  packaging.md  release-process.md  testing.md
docs/getting-started/: installation.md  integration.md  quick-start.md
docs/troubleshooting/: common-issues.md  debugging.md  faq.md  packaging.md  performance.md
docs/user-guide/: caching.md  configuration.md  transports.md  usage-examples.md
examples/: basic_usage.py  claude_desktop_config.json
pypi_mcp/: __init__.py  cache.py  client.py  config.py  exceptions.py  models.py  server.py  utils.py
scripts/: packaging_utils.py  validate_package.py
tests/: __init__.py  test_config.py  test_coverage_improvements.py  test_error_handling.py  test_integration.py  test_performance.py  test_server.py
