[project]
name = "pypi-mcp"
version = "0.1.0"
description = "A comprehensive MCP server for PyPI package information and management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.27.0",
    "packaging>=23.0",
    "cachetools>=5.3.0",
    "pydantic>=2.0.0",
]
authors = [
    {name = "PyPI MCP Contributors"}
]
keywords = ["mcp", "pypi", "package-manager", "python", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
]

[project.urls]
Homepage = "https://github.com/AstroAir/pypi-mcp"
Repository = "https://github.com/AstroAir/pypi-mcp"
Issues = "https://github.com/AstroAir/pypi-mcp/issues"

[project.scripts]
pypi-mcp = "pypi_mcp.server:main"
pypi-mcp-test = "run_tests:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--color=yes",
    "--durations=10"
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may hit real APIs)",
    "performance: Performance and load tests",
    "slow: Slow tests that take more than a few seconds",
    "network: Tests that require network access"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:httpx.*",
    "ignore::UserWarning:pydantic.*"
]
