[project]
name = "pypi-mcp"
dynamic = ["version"]
description = "A comprehensive MCP server for PyPI package information and management"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.27.0",
    "packaging>=23.0",
    "cachetools>=5.3.0",
    "pydantic>=2.0.0",
]
authors = [
    { name = "PyPI MCP Contributors", email = "contributors@example.com" },
]
maintainers = [
    { name = "PyPI MCP Contributors", email = "contributors@example.com" },
]
keywords = [
    "mcp",
    "pypi",
    "package-manager",
    "python",
    "ai",
    "model-context-protocol",
    "package-information",
    "dependency-analysis",
    "vulnerability-scanning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/AstroAir/pypi-mcp"
Repository = "https://github.com/AstroAir/pypi-mcp"
Issues = "https://github.com/AstroAir/pypi-mcp/issues"

[project.scripts]
pypi-mcp = "pypi_mcp.server:main"
pypi-mcp-test = "run_tests:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pypi_mcp/__init__.py"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--color=yes",
    "--durations=10",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may hit real APIs)",
    "performance: Performance and load tests",
    "slow: Slow tests that take more than a few seconds",
    "network: Tests that require network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:httpx.*",
    "ignore::UserWarning:pydantic.*",
]
